<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="@string/enter_name"
            android:hint="@string/enter_name"
            android:inputType="textPersonName|textAutoComplete"
            app:layout_constraintBottom_toTopOf="@id/editNumberParticipant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNumberParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="@string/enter_participant_number"
            android:hint="@string/enter_participant_number"
            android:inputType="number|textAutoComplete"
            app:layout_constraintBottom_toTopOf="@id/editGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:autofillHints="@string/gender"
            android:hint="@string/gender"
            android:inputType="text|textAutoComplete"
            app:layout_constraintBottom_toTopOf="@id/editAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNumberParticipant" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:autofillHints="@string/date_of_birth"
            android:hint="@string/date_of_birth"
            android:inputType="date|textAutoComplete"
            app:layout_constraintBottom_toBottomOf="@+id/editAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editAge"
            app:layout_constraintTop_toTopOf="@id/editAge" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:autofillHints="@string/age"
            android:ems="8"
            android:hint="@string/age"
            android:inputType="number|textAutoComplete"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            app:layout_constraintEnd_toStartOf="@+id/editDateOfBirth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editGender" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/button"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/register"
            app:layout_constraintEnd_toStartOf="@+id/buttonData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAge" />

        <Button
            android:id="@+id/buttonData"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/my_data"
            android:background="@drawable/button"
            app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonRegister"
            app:layout_constraintTop_toBottomOf="@+id/editDateOfBirth" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonData" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>